{
  "version": 4,
  "terraform_version": "1.6.6",
  "serial": 12,
  "lineage": "aa72e3f3-0359-857b-f694-f17087aad7ae",
  "resources": [
    {
      "module": "module.security_group",
      "mode": "data",
      "type": "aws_vpc",
      "name": "default",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:368659980746:vpc/vpc-0045b6e88c6640214",
            "cidr_block": "172.31.0.0/16",
            "cidr_block_associations": [
              {
                "association_id": "vpc-cidr-assoc-06252964099a50809",
                "cidr_block": "172.31.0.0/16",
                "state": "associated"
              }
            ],
            "default": true,
            "dhcp_options_id": "dopt-7fd5ab04",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0045b6e88c6640214",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-0e552fc26d761d55c",
            "owner_id": "368659980746",
            "tags": {
              "Name": "DefaultVPC"
            }
          }
        }
      ]
    },
    {
      "module": "module.security_group.module.security_group",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": []
    },
    {
      "module": "module.security_group.module.security_group",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "this_name_prefix",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:368659980746:security-group/sg-019468080359ad6ab",
            "description": "Security group for terramate-sg-dev",
            "egress": [],
            "id": "sg-019468080359ad6ab",
            "ingress": [],
            "name": "terramate-sg-dev-20240104043556553600000001",
            "name_prefix": "terramate-sg-dev-",
            "owner_id": "368659980746",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "terramate-sg-dev"
            },
            "tags_all": {
              "Name": "terramate-sg-dev"
            },
            "timeouts": {
              "create": "10m",
              "delete": "15m"
            },
            "vpc_id": "vpc-0045b6e88c6640214"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.security_group.data.aws_vpc.default"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.security_group.module.security_group",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "egress_rules",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "All protocols",
            "from_port": -1,
            "id": "sgrule-2208519039",
            "ipv6_cidr_blocks": [
              "::/0"
            ],
            "prefix_list_ids": [],
            "protocol": "-1",
            "security_group_id": "sg-019468080359ad6ab",
            "security_group_rule_id": "",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": -1,
            "type": "egress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.security_group.data.aws_vpc.default",
            "module.security_group.module.security_group.aws_security_group.this",
            "module.security_group.module.security_group.aws_security_group.this_name_prefix"
          ]
        }
      ]
    },
    {
      "module": "module.security_group.module.security_group",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "ingress_rules",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "HTTP",
            "from_port": 80,
            "id": "sgrule-4258880580",
            "ipv6_cidr_blocks": [],
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-019468080359ad6ab",
            "security_group_rule_id": "sgr-0ec060534910b93a3",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 80,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.security_group.data.aws_vpc.default",
            "module.security_group.module.security_group.aws_security_group.this",
            "module.security_group.module.security_group.aws_security_group.this_name_prefix"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "All IPV4 ICMP",
            "from_port": -1,
            "id": "sgrule-1157122201",
            "ipv6_cidr_blocks": [],
            "prefix_list_ids": [],
            "protocol": "icmp",
            "security_group_id": "sg-019468080359ad6ab",
            "security_group_rule_id": "sgr-0ce677f14f2135bac",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": -1,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.security_group.data.aws_vpc.default",
            "module.security_group.module.security_group.aws_security_group.this",
            "module.security_group.module.security_group.aws_security_group.this_name_prefix"
          ]
        }
      ]
    }
  ]
}